[package]
name = "d5"
version = "0.5.0"
authors = ["Daniel Sockwell <daniel@codesections.com", "Ryan O'Beirne <ryanobeirne@ryanobeirne.com"]
description = "The simple, Unix-philosophy tool to retrieve your home network's IP address remotely"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ryanobeirne/d5"
categories = ["development-tools"]
keywords = ["dns", "dynamic-dns", "ddns", "IP", "tool"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1.20"
base64 = "0.10.1"
